<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>dDataApproximation</class>
 <widget class="QDialog" name="dDataApproximation">
  <property name="windowModality">
   <enum>Qt::WindowModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>450</width>
    <height>423</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Аппроксимация данных</string>
  </property>
  <property name="modal">
   <bool>false</bool>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLabel" name="label">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="text">
        <string>Аппроксимирующая формула</string>
       </property>
       <property name="buddy">
        <cstring>cbApproximationForm</cstring>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="cbApproximationForm">
       <property name="sizePolicy">
        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="inputMethodHints">
        <set>Qt::ImhNoPredictiveText</set>
       </property>
       <property name="editable">
        <bool>true</bool>
       </property>
       <property name="sizeAdjustPolicy">
        <enum>QComboBox::AdjustToMinimumContentsLength</enum>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="bApplyForm">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="text">
        <string>Применить</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="hlVariables"/>
   </item>
   <item>
    <widget class="QLabel" name="lFormula">
     <property name="text">
      <string>TextLabel</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QTableWidget" name="tParameters">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>5</verstretch>
      </sizepolicy>
     </property>
     <property name="inputMethodHints">
      <set>Qt::ImhNoPredictiveText</set>
     </property>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
     </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_3"/>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_5">
     <item>
      <widget class="QLabel" name="label_9">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="text">
        <string>Метод</string>
       </property>
       <property name="buddy">
        <cstring>cbMethod</cstring>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="cbMethod">
       <item>
        <property name="text">
         <string>least_squares</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>leastsq</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>differential_evolution</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>brute</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>nelder</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>lbfgsb</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>powell</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>cg</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>newton</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>cobyla</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>tnc</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>trust-ncg</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>dogleg</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>slsqp</string>
        </property>
       </item>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="bCalculateParameters">
       <property name="text">
        <string>Рассчитать параметры модели</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="1" column="0">
      <widget class="QPushButton" name="bRedraw">
       <property name="text">
        <string>Перерисовать</string>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox_2">
       <property name="title">
        <string>Отображение модели на графике</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QRadioButton" name="rbOnData">
          <property name="text">
           <string>на основе отображенных данных</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbOnIntervals">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="text">
           <string>на основе заданных интервалов</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item row="0" column="1" rowspan="2">
      <widget class="QGroupBox" name="groupBox_3">
       <property name="maximumSize">
        <size>
         <width>16777215</width>
         <height>100</height>
        </size>
       </property>
       <property name="title">
        <string>Настройка интервалов</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_7">
        <item>
         <widget class="QTableWidget" name="tableIntervals">
          <property name="enabled">
           <bool>true</bool>
          </property>
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="baseSize">
           <size>
            <width>0</width>
            <height>50</height>
           </size>
          </property>
          <attribute name="horizontalHeaderVisible">
           <bool>false</bool>
          </attribute>
          <attribute name="horizontalHeaderStretchLastSection">
           <bool>true</bool>
          </attribute>
          <attribute name="verticalHeaderVisible">
           <bool>false</bool>
          </attribute>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLabel" name="label_8">
     <property name="text">
      <string>Комментарий</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPlainTextEdit" name="tNotes">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>1</verstretch>
      </sizepolicy>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeType">
        <enum>QSizePolicy::Expanding</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="standardButtons">
        <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
       </property>
       <property name="centerButtons">
        <bool>false</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>cbApproximationForm</tabstop>
  <tabstop>bApplyForm</tabstop>
  <tabstop>tParameters</tabstop>
  <tabstop>bCalculateParameters</tabstop>
  <tabstop>rbOnData</tabstop>
  <tabstop>rbOnIntervals</tabstop>
  <tabstop>bRedraw</tabstop>
  <tabstop>cbMethod</tabstop>
  <tabstop>tNotes</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>dDataApproximation</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>621</x>
     <y>583</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>dDataApproximation</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>621</x>
     <y>583</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
